disp/display_library_fun.h

extern "C" long sgn1(double x);
extern "C" double abs2(double a,double b);
extern "C" double abs3(double a,double b,double c);
extern "C" double arcsin4(double x);
extern "C" double arccos5(double x);
extern "C" double arctan26(double x,double y);
extern "C" const char* i2s7(long i);
extern "C" unsigned long s2i8(const char* s);
extern "C" unsigned char as2i9(const char* s);
extern "C" char i2hc10(unsigned char i);
extern "C" unsigned char hc2i11(char c);
extern "C" const char* i2hs12(unsigned char i);
extern "C" unsigned char hs2i13(const char* s);
extern "C" const char* as2hs14(const char* s);
extern "C" const char* hs2as15(const char* s);
extern "C" const char* i2as16(unsigned long i);
extern "C" const char* i2hs17(unsigned long i);
extern "C" unsigned long NewThread18(void* th);
extern "C" void PauseThread19(unsigned long thi);
extern "C" void ResumeThread20(unsigned long thi);
extern "C" void StopThread21(unsigned long thi);
extern "C" unsigned long MsgBoxW22(const short int* s,const short int* title,unsigned long i);
extern "C" unsigned long MsgBox23(const char* s,const char* title,unsigned long i);
extern "C" void MsgBoxW24(const short int* s,const short int* title);
extern "C" void MsgBox25(const char* s,const char* title);
extern "C" void MsgBoxW26(const short int* s);
extern "C" void MsgBox27(const char* s);
extern "C" void Delay28(unsigned long t);
extern "C" void Delay29();
extern "C" void Sound30(unsigned long hz,unsigned long t);
extern "C" void Sound31(unsigned long hz,double t);
extern "C" void Sound32(unsigned long hz);
extern "C" void FreshFPS33();
extern "C" void AddFPS34();
extern "C" unsigned long GetFPSL35();
extern "C" double GetFPSR36();
extern "C" unsigned long GetFPS37();
extern "C" unsigned long GetError38();
extern "C" void CreateWin39(unsigned long w,unsigned long h,unsigned long cfg,unsigned long cbg,unsigned long style);
extern "C" void CreateWin40(unsigned long w,unsigned long h,unsigned long cfg,unsigned long cbg);
extern "C" void CreateWin41(unsigned long w,unsigned long h,unsigned long c);
extern "C" void CreateWin42(unsigned long w,unsigned long h);
extern "C" void CreateWin43(unsigned long cbg);
extern "C" void CreateWin44();
extern "C" void FreshWin45();
extern "C" void CloseWin46();
extern "C" bool IsWin47();
extern "C" void SetDrawProcedure48(void* th);
extern "C" double GetTimeR49();
extern "C" unsigned long GetTime50();
extern "C" void SetTitle51(const char* s);
extern "C" void SetTitleW52(const short int* s);
extern "C" const char* GetTitle53();
extern "C" const short int* GetTitleW54();
extern "C" void SetSize55(unsigned long w,unsigned long h);
extern "C" unsigned long GetWidth56();
extern "C" unsigned long GetHeight57();
extern "C" unsigned long GetSize58();
extern "C" long GetScrWidth59();
extern "C" long GetScrHeight60();
extern "C" unsigned long GetScrSize61();
extern "C" double GetScrCapsX62();
extern "C" double GetScrCapsY63();
extern "C" long GetBorderTitle64();
extern "C" long GetBorderWidth65();
extern "C" long GetBorderHeight66();
extern "C" unsigned long GetBorderSize67();
extern "C" void SetPos68(unsigned long x,unsigned long y);
extern "C" long GetPosX69();
extern "C" long GetPosY70();
extern "C" unsigned long GetPos71();
extern "C" pbitmap GetWin72();
extern "C" pbitmap GetScr73();
extern "C" unsigned long GetHwnd74(pbitmap b);
extern "C" unsigned long GetHwnd75();
extern "C" unsigned long GetDraw76(pbitmap b);
extern "C" unsigned long GetDraw77();
extern "C" unsigned long GetBGColor78();
extern "C" void SetBGColor79(unsigned long c);
extern "C" unsigned long GetFGColor80();
extern "C" void SetFGColor81(unsigned long c);
extern "C" void SetPenWidth82(unsigned long pew);
extern "C" void SetPenColor83(pbitmap b,unsigned long c);
extern "C" void SetPenColor84(unsigned long c);
extern "C" void SetBrushColor85(pbitmap b,unsigned long c);
extern "C" void SetBrushColor86(unsigned long c);
extern "C" unsigned char GetAlpha87(unsigned long c);
extern "C" unsigned char GetBlue88(unsigned long c);
extern "C" unsigned char GetGreen89(unsigned long c);
extern "C" unsigned char GetRed90(unsigned long c);
extern "C" unsigned long GetRGBA91(unsigned char r,unsigned char g,unsigned char b,unsigned char a);
extern "C" unsigned long GetRGB92(unsigned char r,unsigned char g,unsigned char b);
extern "C" unsigned long RGB2HSL93(unsigned long rgb);
extern "C" unsigned long RGB2HSV94(unsigned long rgb);
extern "C" unsigned long RGB2HSI95(unsigned long rgb);
extern "C" unsigned long RGB2HSN96(unsigned long rgb);
extern "C" unsigned long HSL2RGB97(unsigned long hsn);
extern "C" unsigned long HSV2RGB98(unsigned long hsn);
extern "C" unsigned long HSI2RGB99(unsigned long hsn);
extern "C" unsigned long HSN2RGB100(unsigned long hsn);
extern "C" void MixColor101(unsigned long rgb1,unsigned long rgb2,unsigned long rgb3,double m);
extern "C" void MixColor102(unsigned long rgb1,unsigned long rgb2,unsigned long rgb3);
extern "C" void SetFont103(pbitmap b);
extern "C" void SetFont104();
extern "C" void SetFontWidth105(unsigned long w);
extern "C" void SetFontHeight106(unsigned long h);
extern "C" void SetFontSize107(unsigned long w,unsigned long h);
extern "C" void SetFontWeight108(unsigned long wg);
extern "C" void SetFontLtalic109(unsigned long lt);
extern "C" void SetFontUnderLine110(unsigned long ud);
extern "C" void SetFontStrikeOut111(unsigned long sk);
extern "C" void SetFontCharSet112(unsigned long cs);
extern "C" void SetFontName113(const char* s);
extern "C" void GetStringSize114(const char* s);
extern "C" unsigned long GetStringWidth115(const char* s);
extern "C" unsigned long GetStringHeight116(const char* s);
extern "C" void DrawTextXY117(pbitmap b,const char* s,long x,long y,unsigned long w,unsigned long h,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextXY118(pbitmap b,const char* s,long x,long y,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextXY119(pbitmap b,const char* s,long x,long y,unsigned long cfg);
extern "C" void DrawTextXY120(const char* s,long x,long y,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextXY121(const char* s,long x,long y,unsigned long cfg);
extern "C" void DrawTextXY122(const char* s,unsigned long x,unsigned long y);
extern "C" void DrawText123(const char* s,unsigned long cfg,unsigned long cbg);
extern "C" void DrawText124(const char* s,unsigned long cfg);
extern "C" void DrawText125(const char* s);
extern "C" void DrawTextlnXY126(const char* s,long x,long y,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextlnXY127(const char* s,long x,long y,unsigned long cfg);
extern "C" void DrawTextlnXY128(const char* s,unsigned long x,unsigned long y);
extern "C" void DrawTextln129(const char* s,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextln130(const char* s,unsigned long cfg);
extern "C" void DrawTextln131(const char* s);
extern "C" void DrawTextln132();
extern "C" void DrawTextXYw133(pbitmap b,const char* s,long x,long y,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextXYw134(pbitmap b,const char* s,long x,long y,unsigned long cfg);
extern "C" void DrawTextXYw135(const char* s,long x,long y,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextXYw136(const char* s,long x,long y,unsigned long cfg);
extern "C" void DrawTextXYw137(const char* s,unsigned long x,unsigned long y);
extern "C" void DrawTextw138(const char* s,unsigned long cfg,unsigned long cbg);
extern "C" void DrawTextw139(const char* s,unsigned long cfg);
extern "C" void DrawTextw140(const char* s);
long sgn(double x){return sgn1(x);}
double abs(double a,double b){return abs2(a,b);}
double abs(double a,double b,double c){return abs3(a,b,c);}
double arcsin(double x){return arcsin4(x);}
double arccos(double x){return arccos5(x);}
double arctan2(double x,double y){return arctan26(x,y);}
mystring i2s(long i){return i2s7(i);}
unsigned long s2i(const char* s){return s2i8(s);}
unsigned char as2i(const char* s){return as2i9(s);}
char i2hc(unsigned char i){return i2hc10(i);}
unsigned char hc2i(char c){return hc2i11(c);}
mystring i2hs(unsigned char i){return i2hs12(i);}
unsigned char hs2i(const char* s){return hs2i13(s);}
mystring as2hs(const char* s){return as2hs14(s);}
mystring hs2as(const char* s){return hs2as15(s);}
mystring i2as(unsigned long i){return i2as16(i);}
mystring i2hs(unsigned long i){return i2hs17(i);}