disp/display_library.pas


function sgn1(x:double):longint;cdecl;
begin sgn1:=display.sgn(x);end;
function abs2(a,b:double):double;cdecl;
begin abs2:=display.abs(a,b);end;
function abs3(a,b,c:double):double;cdecl;
begin abs3:=display.abs(a,b,c);end;
function arcsin4(x:double):double;cdecl;
begin arcsin4:=display.arcsin(x);end;
function arccos5(x:double):double;cdecl;
begin arccos5:=display.arccos(x);end;
function arctan26(x,y:double):double;cdecl;
begin arctan26:=display.arctan2(x,y);end;
function i2s7(i:longint):pchar;cdecl;
begin i2s7:=pchar(display.i2s(i));end;
function s2i8(s:pchar):longword;cdecl;
begin s2i8:=display.s2i(s);end;
function as2i9(s:pchar):byte;cdecl;
begin as2i9:=display.as2i(s);end;
function i2hc10(i:byte):char;cdecl;
begin i2hc10:=display.i2hc(i);end;
function hc2i11(c:char):byte;cdecl;
begin hc2i11:=display.hc2i(c);end;
function i2hs12(i:byte):pchar;cdecl;
begin i2hs12:=pchar(display.i2hs(i));end;
function hs2i13(s:pchar):byte;cdecl;
begin hs2i13:=display.hs2i(s);end;
function as2hs14(s:pchar):pchar;cdecl;
begin as2hs14:=pchar(display.as2hs(s));end;
function hs2as15(s:pchar):pchar;cdecl;
begin hs2as15:=pchar(display.hs2as(s));end;
function i2as16(i:longword):pchar;cdecl;
begin i2as16:=pchar(display.i2as(i));end;
function i2hs17(i:longword):pchar;cdecl;
begin i2hs17:=pchar(display.i2hs(i));end;
function NewThread18(th:pointer):longword;cdecl;
begin NewThread18:=display.NewThread(th);end;
procedure PauseThread19(thi:longword);cdecl;
begin display.PauseThread(thi);end;
procedure ResumeThread20(thi:longword);cdecl;
begin display.ResumeThread(thi);end;
procedure StopThread21(thi:longword);cdecl;
begin display.StopThread(thi);end;
function MsgBoxW22(s,title:unicodestring;i:longword):longword;cdecl;
begin MsgBoxW22:=display.MsgBoxW(s,title,i);end;
function MsgBox23(s,title:pchar;i:longword):longword;cdecl;
begin MsgBox23:=display.MsgBox(s,title,i);end;
procedure MsgBoxW24(s,title:unicodestring);cdecl;
begin display.MsgBoxW(s,title);end;
procedure MsgBox25(s,title:pchar);cdecl;
begin display.MsgBox(s,title);end;
procedure MsgBoxW26(s:unicodestring);cdecl;
begin display.MsgBoxW(s);end;
procedure MsgBox27(s:pchar);cdecl;
begin display.MsgBox(s);end;
procedure Delay28(t:longword);cdecl;
begin display.Delay(t);end;
procedure Delay29();cdecl;
begin display.Delay();end;
procedure Sound30(hz:longword;t:longword);cdecl;
begin display.Sound(hz,t);end;
procedure Sound31(hz:longword;t:double);cdecl;
begin display.Sound(hz,t);end;
procedure Sound32(hz:longword);cdecl;
begin display.Sound(hz);end;
procedure FreshFPS33();cdecl;
begin display.FreshFPS();end;
procedure AddFPS34();cdecl;
begin display.AddFPS();end;
function GetFPSL35():longword;cdecl;
begin GetFPSL35:=display.GetFPSL();end;
function GetFPSR36():double;cdecl;
begin GetFPSR36:=display.GetFPSR();end;
function GetFPS37():longword;cdecl;
begin GetFPS37:=display.GetFPS();end;
function GetError38():longword;cdecl;
begin GetError38:=display.GetError();end;
procedure CreateWin39(w,h:longword;cfg,cbg:longword;style:longword);cdecl;
begin display.CreateWin(w,h,cfg,cbg,style);end;
procedure CreateWin40(w,h:longword;cfg,cbg:longword);cdecl;
begin display.CreateWin(w,h,cfg,cbg);end;
procedure CreateWin41(w,h:longword;c:longword);cdecl;
begin display.CreateWin(w,h,c);end;
procedure CreateWin42(w,h:longword);cdecl;
begin display.CreateWin(w,h);end;
procedure CreateWin43(cbg:longword);cdecl;
begin display.CreateWin(cbg);end;
procedure CreateWin44();cdecl;
begin display.CreateWin();end;
procedure FreshWin45();cdecl;
begin display.FreshWin();end;
procedure CloseWin46();cdecl;
begin display.CloseWin();end;
function IsWin47():boolean;cdecl;
begin IsWin47:=display.IsWin();end;
procedure SetDrawProcedure48(th:tprocedure);cdecl;
begin display.SetDrawProcedure(th);end;
function GetTimeR49():double;cdecl;
begin GetTimeR49:=display.GetTimeR();end;
function GetTime50():longword;cdecl;
begin GetTime50:=display.GetTime();end;
procedure SetTitle51(s:pchar);cdecl;
begin display.SetTitle(s);end;
procedure SetTitleW52(s:unicodestring);cdecl;
begin display.SetTitleW(s);end;
function GetTitle53():pchar;cdecl;
begin GetTitle53:=pchar(display.GetTitle());end;
function GetTitleW54():unicodestring;cdecl;
begin GetTitleW54:=display.GetTitleW();end;
procedure SetSize55(w,h:longword);cdecl;
begin display.SetSize(w,h);end;
function GetWidth56():longword;cdecl;
begin GetWidth56:=display.GetWidth();end;
function GetHeight57():longword;cdecl;
begin GetHeight57:=display.GetHeight();end;
function GetSize58():longword;cdecl;
begin GetSize58:=display.GetSize();end;
function GetScrWidth59():longint;cdecl;
begin GetScrWidth59:=display.GetScrWidth();end;
function GetScrHeight60():longint;cdecl;
begin GetScrHeight60:=display.GetScrHeight();end;
function GetScrSize61():longword;cdecl;
begin GetScrSize61:=display.GetScrSize();end;
function GetScrCapsX62():double;cdecl;
begin GetScrCapsX62:=display.GetScrCapsX();end;
function GetScrCapsY63():double;cdecl;
begin GetScrCapsY63:=display.GetScrCapsY();end;
function GetBorderTitle64():longint;cdecl;
begin GetBorderTitle64:=display.GetBorderTitle();end;
function GetBorderWidth65():longint;cdecl;
begin GetBorderWidth65:=display.GetBorderWidth();end;
function GetBorderHeight66():longint;cdecl;
begin GetBorderHeight66:=display.GetBorderHeight();end;
function GetBorderSize67():longword;cdecl;
begin GetBorderSize67:=display.GetBorderSize();end;
procedure SetPos68(x,y:longword);cdecl;
begin display.SetPos(x,y);end;
function GetPosX69():longint;cdecl;
begin GetPosX69:=display.GetPosX();end;
function GetPosY70():longint;cdecl;
begin GetPosY70:=display.GetPosY();end;
function GetPos71():longword;cdecl;
begin GetPos71:=display.GetPos();end;
function GetWin72():pbitmap;cdecl;
begin GetWin72:=display.GetWin();end;
function GetScr73():pbitmap;cdecl;
begin GetScr73:=display.GetScr();end;
function GetHwnd74(b:pbitmap):longword;cdecl;
begin GetHwnd74:=display.GetHwnd(b);end;
function GetHwnd75():longword;cdecl;
begin GetHwnd75:=display.GetHwnd();end;
function GetDraw76(b:pbitmap):longword;cdecl;
begin GetDraw76:=display.GetDraw(b);end;
function GetDraw77():longword;cdecl;
begin GetDraw77:=display.GetDraw();end;
function GetBGColor78():longword;cdecl;
begin GetBGColor78:=display.GetBGColor();end;
procedure SetBGColor79(c:longword);cdecl;
begin display.SetBGColor(c);end;
function GetFGColor80():longword;cdecl;
begin GetFGColor80:=display.GetFGColor();end;
procedure SetFGColor81(c:longword);cdecl;
begin display.SetFGColor(c);end;
procedure SetPenWidth82(pew:longword);cdecl;
begin display.SetPenWidth(pew);end;
procedure SetPenColor83(b:pbitmap;c:longword);cdecl;
begin display.SetPenColor(b,c);end;
procedure SetPenColor84(c:longword);cdecl;
begin display.SetPenColor(c);end;
procedure SetBrushColor85(b:pbitmap;c:longword);cdecl;
begin display.SetBrushColor(b,c);end;
procedure SetBrushColor86(c:longword);cdecl;
begin display.SetBrushColor(c);end;
function GetAlpha87(c:longword):byte;cdecl;
begin GetAlpha87:=display.GetAlpha(c);end;
function GetBlue88(c:longword):byte;cdecl;
begin GetBlue88:=display.GetBlue(c);end;
function GetGreen89(c:longword):byte;cdecl;
begin GetGreen89:=display.GetGreen(c);end;
function GetRed90(c:longword):byte;cdecl;
begin GetRed90:=display.GetRed(c);end;
function GetRGBA91(r,g,b,a:byte):longword;cdecl;
begin GetRGBA91:=display.GetRGBA(r,g,b,a);end;
function GetRGB92(r,g,b:byte):longword;cdecl;
begin GetRGB92:=display.GetRGB(r,g,b);end;
function RGB2HSL93(rgb:longword):longword;cdecl;
begin RGB2HSL93:=display.RGB2HSL(rgb);end;
function RGB2HSV94(rgb:longword):longword;cdecl;
begin RGB2HSV94:=display.RGB2HSV(rgb);end;
function RGB2HSI95(rgb:longword):longword;cdecl;
begin RGB2HSI95:=display.RGB2HSI(rgb);end;
function RGB2HSN96(rgb:longword):longword;cdecl;
begin RGB2HSN96:=display.RGB2HSN(rgb);end;
function HSL2RGB97(hsn:longword):longword;cdecl;
begin HSL2RGB97:=display.HSL2RGB(hsn);end;
function HSV2RGB98(hsn:longword):longword;cdecl;
begin HSV2RGB98:=display.HSV2RGB(hsn);end;
function HSI2RGB99(hsn:longword):longword;cdecl;
begin HSI2RGB99:=display.HSI2RGB(hsn);end;
function HSN2RGB100(hsn:longword):longword;cdecl;
begin HSN2RGB100:=display.HSN2RGB(hsn);end;
procedure MixColor101(rgb1,rgb2:longword;var rgb3:longword;m:double);cdecl;
begin display.MixColor(rgb1,rgb2,rgb3,m);end;
procedure MixColor102(rgb1,rgb2:longword;var rgb3:longword);cdecl;
begin display.MixColor(rgb1,rgb2,rgb3);end;
procedure SetFont103(b:pbitmap);cdecl;
begin display.SetFont(b);end;
procedure SetFont104();cdecl;
begin display.SetFont();end;
procedure SetFontWidth105(w:longword);cdecl;
begin display.SetFontWidth(w);end;
procedure SetFontHeight106(h:longword);cdecl;
begin display.SetFontHeight(h);end;
procedure SetFontSize107(w,h:longword);cdecl;
begin display.SetFontSize(w,h);end;
procedure SetFontWeight108(wg:longword);cdecl;
begin display.SetFontWeight(wg);end;
procedure SetFontLtalic109(lt:longword);cdecl;
begin display.SetFontLtalic(lt);end;
procedure SetFontUnderLine110(ud:longword);cdecl;
begin display.SetFontUnderLine(ud);end;
procedure SetFontStrikeOut111(sk:longword);cdecl;
begin display.SetFontStrikeOut(sk);end;
procedure SetFontCharSet112(cs:longword);cdecl;
begin display.SetFontCharSet(cs);end;
procedure SetFontName113(s:pchar);cdecl;
begin display.SetFontName(s);end;
procedure GetStringSize114(s:pchar);cdecl;
begin display.GetStringSize(s);end;
function GetStringWidth115(s:pchar):longword;cdecl;
begin GetStringWidth115:=display.GetStringWidth(s);end;
function GetStringHeight116(s:pchar):longword;cdecl;
begin GetStringHeight116:=display.GetStringHeight(s);end;
procedure DrawTextXY117(b:pbitmap;s:pchar;x,y:longint;w,h:longword;cfg,cbg:longword);cdecl;
begin display.DrawTextXY(b,s,x,y,w,h,cfg,cbg);end;
procedure DrawTextXY118(b:pbitmap;s:pchar;x,y:longint;cfg,cbg:longword);cdecl;
begin display.DrawTextXY(b,s,x,y,cfg,cbg);end;
procedure DrawTextXY119(b:pbitmap;s:pchar;x,y:longint;cfg:longword);cdecl;
begin display.DrawTextXY(b,s,x,y,cfg);end;
procedure DrawTextXY120(s:pchar;x,y:longint;cfg,cbg:longword);cdecl;
begin display.DrawTextXY(s,x,y,cfg,cbg);end;
procedure DrawTextXY121(s:pchar;x,y:longint;cfg:longword);cdecl;
begin display.DrawTextXY(s,x,y,cfg);end;
procedure DrawTextXY122(s:pchar;x,y:longword);cdecl;
begin display.DrawTextXY(s,x,y);end;
procedure DrawText123(s:pchar;cfg,cbg:longword);cdecl;
begin display.DrawText(s,cfg,cbg);end;
procedure DrawText124(s:pchar;cfg:longword);cdecl;
begin display.DrawText(s,cfg);end;
procedure DrawText125(s:pchar);cdecl;
begin display.DrawText(s);end;
procedure DrawTextlnXY126(s:pchar;x,y:longint;cfg,cbg:longword);cdecl;
begin display.DrawTextlnXY(s,x,y,cfg,cbg);end;
procedure DrawTextlnXY127(s:pchar;x,y:longint;cfg:longword);cdecl;
begin display.DrawTextlnXY(s,x,y,cfg);end;
procedure DrawTextlnXY128(s:pchar;x,y:longword);cdecl;
begin display.DrawTextlnXY(s,x,y);end;
procedure DrawTextln129(s:pchar;cfg,cbg:longword);cdecl;
begin display.DrawTextln(s,cfg,cbg);end;
procedure DrawTextln130(s:pchar;cfg:longword);cdecl;
begin display.DrawTextln(s,cfg);end;
procedure DrawTextln131(s:pchar);cdecl;
begin display.DrawTextln(s);end;
procedure DrawTextln132();cdecl;
begin display.DrawTextln();end;
procedure DrawTextXYw133(b:pbitmap;s:pchar;x,y:longint;cfg,cbg:longword);cdecl;
begin display.DrawTextXYw(b,s,x,y,cfg,cbg);end;
procedure DrawTextXYw134(b:pbitmap;s:pchar;x,y:longint;cfg:longword);cdecl;
begin display.DrawTextXYw(b,s,x,y,cfg);end;
procedure DrawTextXYw135(s:pchar;x,y:longint;cfg,cbg:longword);cdecl;
begin display.DrawTextXYw(s,x,y,cfg,cbg);end;
procedure DrawTextXYw136(s:pchar;x,y:longint;cfg:longword);cdecl;
begin display.DrawTextXYw(s,x,y,cfg);end;
procedure DrawTextXYw137(s:pchar;x,y:longword);cdecl;
begin display.DrawTextXYw(s,x,y);end;
procedure DrawTextw138(s:pchar;cfg,cbg:longword);cdecl;
begin display.DrawTextw(s,cfg,cbg);end;
procedure DrawTextw139(s:pchar;cfg:longword);cdecl;
begin display.DrawTextw(s,cfg);end;
procedure DrawTextw140(s:pchar);cdecl;
begin display.DrawTextw(s);end;
